added low level hacking section

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -335,7 +335,7 @@ The [pdfx](https://www.metachris.com/pdfx/) tool is designed to detect and extra
 pdfx -v whatever.pdf > whatever.txt
 ```
 
-I did some limited testing with this tool in 2016. One issue I ran into is that pdfx [truncates URLS that span more than one line](https://github.com/metachris/pdfx/issues/21). As of 2021, this issue hasn't been fixed so far, which seriously limits the usefulness of this (otherwise very interesting) tool.
+I did some limited testing with this tool in 2016. One issue I ran into is that pdfx [truncates URLS that span more than one line](https://github.com/metachris/pdfx/issues/21). As of 2021, this issue hasn't been fixed so far, which seriously limits the usefulness of this (otherwise very interesting) tool. It's worth mentioning that *pdfx* also provides functionality to automatically download all referenced PDFs from any PDF document. I haven't tested this myself.
 
 ### Other URL extraction tools
 
@@ -430,25 +430,119 @@ comparepdf -ca -v=2 whatever.pdf wherever.pdf
 
 In this case the output either shows "No differences detected" or "Files look different".
 
+## Low-level PDF hacking
+
+From time to time some pesky PDF issue arises the need to look into the low-level objects that make up a document. I mostly use a Hex editor for such cases, but here are some useful additional tools.
+
+### Inspect internal PDF structure with PDFBox PDFDebugger
+
+PDFBox includes a "PDF Debugger" that is quite useful for exploring a PDF's low-level structure. You can start it with the following command:
+
+```bash
+java -jar ~/pdfbox/pdfbox-app-2.0.24.jar PDFDebugger whatever.pdf
+```
+
+Subsequently a GUI window pops up that allows you to browse the PDF's internal objects:
+
+<figure class="image">
+  <img src="{{ BASE_PATH }}/images/2021/09/pdf-debugger.png" alt="PDF Debugger screenshot">
+  <figcaption>Screenshot of PDFBOX PDFDebugger.</figcaption>
+</figure>
+
+## View, search and extract PDF objects with mutool show
+
+Mutool's *show* command allows you to print user-defined PDF objects to stdout. A couple of things you can do with this:
+
+- Print the document trailer:
+  ```bash
+  mutool show whatever.pdf trailer
+  ```
+
+  Result:
+
+  ```
+trailer
+<<
+  /DecodeParms <<
+    /Columns 3
+    /Predictor 12
+  >>
+  /Filter /FlateDecode
+  /ID [ <500AB94E8F45C149808B2EEE98528B78> <431017E495216040A953126BB73D0CD4> ]
+  /Index [ 11 10 ]
+  /Info 10 0 R
+  /Length 47
+  /Prev 24426
+  /Root 12 0 R
+  /Size 21
+  /Type /XRef
+  /W [ 1 2 0 ]
+>>
+  ```
+
+- Print the cross-reference table:
+  ```bash
+  mutool show whatever.pdf xref
+  ```
+
+  Result:
+  ```
+  xref
+  0 21
+  00000: 0000000000 00000 f 
+  00001: 0000019994 00000 n 
+  00002: 0000020399 00000 n 
+  00003: 0000020534 00000 n 
+  ::
+  etc
+  ```
+
+- Print an indirect object by its number:
+  ```bash
+  mutool show whatever.pdf 12
+  ```
+
+  Result:
+
+  ```
+12 0 obj
+<<
+  /Metadata 4 0 R
+  /Pages 9 0 R
+  /Type /Catalog
+>>
+endobj
+```
+
+- Extract only stream contents as raw binary data and write to a new file:
+  ```bash
+  mutool show -b whatever.pdf 151 > whatever.dat
+  ```
+
+  This command is particularly useful for extracting the raw data from a stream object (e.g. an image or multimedia file).
+
+More advanced queries are possible as well. For example, the [mutool manual](https://mupdf.com/docs/manual-mutool-show.html) gives the following example, which shows all JPEG compressed stream objects:
+
+```bash
+mutool show whatever.pdf grep | grep '/Filter/DCTDecode'
+```
+
+Result:
+
+```
+1 0 obj <</BitsPerComponent 8/ColorSpace/DeviceRGB/Filter/DCTDecode/Height 516/Length 76403/Subtype/Image/Type/XObject/Width 1226>> stream
+18 0 obj <</BitsPerComponent 8/ColorSpace/DeviceRGB/Filter/DCTDecode/Height 676/Length 149186/Subtype/Image/Type/XObject/Width 1014>> stream
+19 0 obj <</BitsPerComponent 8/ColorSpace/DeviceRGB/Filter/DCTDecode/Height 676/Length 142232/Subtype/Image/Type/XObject/Width 1014>> stream
+24 0 obj <</BitsPerComponent 8/ColorSpace/DeviceRGB/Filter/DCTDecode/Height 676/Length 192073/Subtype/Image/Type/XObject/Width 1014>> stream
+25 0 obj <</BitsPerComponent 8/ColorSpace/DeviceRGB/Filter/DCTDecode/Height 676/Length 141081/Subtype/Image/Type/XObject/Width 1014>> stream
+```
+
 ## Repair
 
 Ghostscript, Poppler:
 
 <https://superuser.com/questions/278562/how-can-i-fix-repair-a-corrupted-pdf-file>
 
-
-
-## Extract internal PDF objects
-
-<https://gist.github.com/bitsgalore/0ae15a7c964b04671828891abfc41b37>
-
-
-
-
-
-## Extract references and metadata from PDF documents, and download all referenced PDFs
-
-<https://www.metachris.com/pdfx/>
 
 ## Convert PDF to sth else
 
@@ -458,7 +552,6 @@ pdftocairo (Poppler)?
 ## Repair corrupted PDF
 
 <https://superuser.com/questions/278562/how-can-i-fix-repair-a-corrupted-pdf-file>
-
 
 
 ## Reduce size of large PDF with hi-res graphics
