added few words

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -521,7 +521,7 @@ endobj
 
   This command is particularly useful for extracting the raw data from a stream object (e.g. an image or multimedia file).
 
-More advanced queries are possible as well. For example, the [mutool manual](https://mupdf.com/docs/manual-mutool-show.html) gives the following example, which shows all JPEG compressed stream objects:
+More advanced queries are possible as well. For example, the [mutool manual](https://mupdf.com/docs/manual-mutool-show.html) gives the following example, which shows all JPEG compressed stream objects in a file:
 
 ```bash
 mutool show whatever.pdf grep | grep '/Filter/DCTDecode'
