inserted comment on contentmine project

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -318,6 +318,12 @@ java -jar ~/tika/tika-app-2.1.0.jar --text whatever.pdf > whatever.txt
 
 An explanation of all available options is [available here](https://tika.apache.org/1.17/gettingstarted.html) (section "Using Tika as a command line utility").
 
+<!--
+
+TODO: check out https://contentmine.github.io/
+
+-->
+
 ## Extract URLs
 
 When extracting URLs, it's important to make a distinction between the following two cases:
