added section on Tika server

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -318,6 +318,22 @@ java -jar ~/tika/tika-app-2.1.0.jar --text whatever.pdf > whatever.txt
 
 An explanation of all available options is [available here](https://tika.apache.org/1.17/gettingstarted.html) (section "Using Tika as a command line utility").
 
+If you need to process many PDFs, you might consider using TikaServer for better performance. A ([runnable JAR is available here](https://tika.apache.org/download.html)). To use it, first start the server using:
+
+```bash
+java -jar ~/tika/tika-server-standard-2.1.0.jar
+```
+Once the server is running, use [cURL](https://en.wikipedia.org/wiki/CURL) (from another terminal window) to submit text extraction requests:
+
+```bash
+curl -T whatever.pdf http://localhost:9998/tika --header "Accept: text/plain" > whatever.txt
+
+```
+
+The full TikaServer documentation is [available here](https://cwiki.apache.org/confluence/display/TIKA/TikaServer).
+
+Yet another option is [Tika-python](https://github.com/chrismattmann/tika-python), which is a Python port of Tika that uses TikaServer under the hood (resulting in similar performance).
+
 <!--
 
 TODO: check out https://contentmine.github.io/
@@ -576,3 +592,5 @@ pdftocairo (Poppler)?
 [^3]: The `--off` switch disables PDF/A validation. Output is redirected to a file (recommended because, depending on the configuration used, VeraPDF can generate a *lot* of output).
 
 [^4]: On Debian-based systems you can install it using `sudo apt install comparepdf`.
+
+[^5]: Whith the "regular" Tika application, performance can be poor because a new Java VM has to be started for each processed PDF. With TikaServer, the VM is only started once. 
