--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -65,7 +65,7 @@ The tools in Xpdf are largely identical, but don't include *pdfseparate*, *pdfsi
 
 The remaining sections of this post are dedicated to specific tasks. As you will see, many of these can be addressed using the multi-tools listed in this section.
 
-## Validate / test integrity of PDF document
+## Validation integrity testing
 
 PDFs that are damaged, structurally flawed or otherwise not conformant to the PDF format specification can result in a multitude of problems. A number of tools provide error checking and integrity testing functionality. This can range from limited structure checks, to full (claimed) validation against the filespec. It's important to note that none of the tools mentioned here are perfect, and some faults that are picked up by one tool may be completely ignored by another one and vice versa. So it's often a good idea to try multiple tools.
 
@@ -147,13 +147,9 @@ mutool info whatever.pdf
 
 - Several online resources recommend the *pdfinfo* tool that is part of Xpdf and Poppler for integrity checking. However, while writing this post I ran a quick test of the tool on a PDF with a truncated document trailer[^1] (which is a very serious flaw), which was not flagged by *pdfinfo* at all.  
 
-## Validate compliance with PDF/A or PDF/UA
+## Validate compliance with PDF/A or PDF/UA with VeraPDF
 
-[PDF/A](https://en.wikipedia.org/wiki/PDF/A) comprises a set of ISO-standardized profiles that are aimed at long-term preservation. [PDF/UA](https://en.wikipedia.org/wiki/PDF/UA) is another ISO-standardized profile that ensures accessibility for people with disabilities. These are not separate file formats, but rather profiles within ISO 32000 that put some constraints on PDF's full set of features.
-
-### Validate PDF/A or PDF/UA with VeraPDF
-
-[VeraPDF](https://verapdf.org/) was originally developed as an open source PDF/A validator that  covers all parts of the PDF/A standards. Starting with version 1.18, it also added support for PDF/UA. The following command lists al available validation profiles:
+[PDF/A](https://en.wikipedia.org/wiki/PDF/A) comprises a set of ISO-standardized profiles that are aimed at long-term preservation. [PDF/UA](https://en.wikipedia.org/wiki/PDF/UA) is another ISO-standardized profile that ensures accessibility for people with disabilities. These are not separate file formats, but rather profiles within ISO 32000 that put some constraints on PDF's full set of features. [VeraPDF](https://verapdf.org/) was originally developed as an open source PDF/A validator that  covers all parts of the PDF/A standards. Starting with version 1.18, it also added support for PDF/UA. The following command lists al available validation profiles:
 
 ```bash
 verapdf -l
@@ -236,13 +232,9 @@ verapdf --recurse --off --extract myDir > whatever.xml
 
 The [VeraPDF documentation](https://docs.verapdf.org/cli/feature-extraction/) discusses the feature extraction functionality in more detail.
 
-## Assess compliance with user-defined policy or profile
+## Policy or profile compliance assessment with VeraPDF
 
-The results of the feature extraction exercise described in the previous section can also be used as input for policy-based assessments. For instance, archival institutions may have policies that prohibit e.g. PDFs with encryption or fonts that are not embedded.
-
-### VeraPDF policy assessment
-
-Automated assessment of PDFs against such policies can also be done with VeraPDF. This requires that the rules that make up the policy are expressed as a machine-readable [Schematron](https://en.wikipedia.org/wiki/Schematron) file. As an example, the Schematron file below is made up of two rules that each prohibit specific encryption-related features:
+The results of the feature extraction exercise described in the previous section can also be used as input for policy-based assessments. For instance, archival institutions may have policies that prohibit e.g. PDFs with encryption or fonts that are not embedded. This can also be done with VeraPDF. This requires that the rules that make up the policy are expressed as a machine-readable [Schematron](https://en.wikipedia.org/wiki/Schematron) file. As an example, the Schematron file below is made up of two rules that each prohibit specific encryption-related features:
 
 ```xml
 <?xml version="1.0"?>
@@ -284,7 +276,7 @@ The outcome of the policy-based assessment can be found in the output file's *po
 
 More examples can be found in my 2017 post [Policy-based assessment with VeraPDF - a first impression]({{ BASE_PATH }}/2017/06/01/policy-based-assessment-with-verapdf-a-first-impression).
 
-## Extract text
+## Text extraction
 
 Text extraction from PDF documents is notoriously hard. [This post]](https://filingdb.com/b/pdf-text-extraction) gives a good overview of the main pitfalls. With that said, quite a few tools are available for this, and below I list a few that are useful starting points.
 
@@ -334,22 +326,16 @@ The full TikaServer documentation is [available here](https://cwiki.apache.org/c
 
 Yet another option is [Tika-python](https://github.com/chrismattmann/tika-python), which is a Python port of Tika that uses TikaServer under the hood (resulting in similar performance).
 
-<!--
+## Link extraction
 
-TODO: check out https://contentmine.github.io/
+When extracting (hyper)links, it's important to make a distinction between the following two cases:
 
--->
-
-## Extract URLs
-
-When extracting URLs, it's important to make a distinction between the following two cases:
-
-1. URLs that are encoded as a "link annotation", which is a data structure in PDF that results in a clickable link
-2. Non-clickable URLs that are just part of the body text.
+1. Links that are encoded as a "link annotation", which is a data structure in PDF that results in a clickable link
+2. Non-clickable links/URLs that are just part of the body text.
 
 The automated extraction of the first case is straightforward, while the second case depends on some kind of lexical analysis of the body text (typically based on regular expressions). For most practical applications the extraction of both types is desired.
 
-### Extract URLs with pdfx
+### Extract links with pdfx
 
 The [pdfx](https://www.metachris.com/pdfx/) tool is designed to detect and extract external references, including URLs. Its URL detection uses lexical analysis, and is based on [RegEx patterns written by John Gruber](https://gist.github.com/gruber/8891611). The basic command line for URL extraction is:
 
@@ -359,25 +345,19 @@ pdfx -v whatever.pdf > whatever.txt
 
 I did some limited testing with this tool in 2016. One issue I ran into is that pdfx [truncates URLS that span more than one line](https://github.com/metachris/pdfx/issues/21). As of 2021, this issue hasn't been fixed so far, which seriously limits the usefulness of this (otherwise very interesting) tool. It's worth mentioning that *pdfx* also provides functionality to automatically download all referenced PDFs from any PDF document. I haven't tested this myself.
 
-### Other URL extraction tools
+### Other link extraction tools
 
 - Some years ago Ross Spencer wrote [a link extraction tool that uses Apache Tika](https://github.com/httpreserve/tikalinkextract). There's more info in [this blog post](https://openpreservation.org/blogs/hyperlinks-in-your-files-how-to-get-them-out-using-tikalinkextract/). I'm not sure if this tool is still maintained.
 
 - Around the same time I wrote [this simple extraction script](https://gist.github.com/bitsgalore/aab680a9bccfc5496948b776ee06397c) that wraps around Apache Tika and the [xurl](https://github.com/mvdan/xurls) tool. I used this to extract URLs from MS Word documents, but this should probably work for PDF too (I haven't tested this though!).
 
-
 ## Check PDF document for broken links with pdfcpu
 
 <https://gist.github.com/bitsgalore/9eac23e44d6d99b3caa6#check-pdf-document-for-broken-links-with-pdfcpu>
 
+## Image extration with pdfimages
 
-## Extract images
-
-PDFs often contain embedded images, which can be extracted in various ways. 
-
-### Extract images with pdfimages
-
-The *pdfimages* tool of Xpdf/Poppler is probably the most straightforward image extraction tool. At minimum, it takes as its arguments the name of the input PDF document, and the "image-root" which is actually just a text prefix that is used to generate the name of the output images. By default it writes its output to one of the [Netpbm](https://en.wikipedia.org/wiki/Netpbm) file formats, but for convenience you might want to use the `-png` option, which uses the PNG format instead:
+PDFs often contain embedded images, which can be extracted with *pdfimages* tool that is part of Xpdf/Poppler. At minimum, it takes as its arguments the name of the input PDF document, and the "image-root" which is actually just a text prefix that is used to generate the name of the output images. By default it writes its output to one of the [Netpbm](https://en.wikipedia.org/wiki/Netpbm) file formats, but for convenience you might want to use the `-png` option, which uses the PNG format instead:
 
 ```bash
 pdfimages -png whatever.pdf whatever
@@ -400,11 +380,9 @@ SEVERE: Cannot read JPEG2000 image: Java Advanced Imaging (JAI) Image I/O Tools 
 
 -->
 
-## Show information about embedded images
+## Listy embedded image information with pdfimages
 
-### List images with  with pdfimages
-
-The aforementioned *pdfimages* tool is also useful for getting an overview of all embedded images in a PDF, and their main characteristics (width, height, colour, encoding, resolution and size). just user the `-list` option as shown below:  
+The *pdfimages* tool is also useful for getting an overview of all embedded images in a PDF, and their main characteristics (width, height, colour, encoding, resolution and size). just user the `-list` option as shown below:  
 
 ```bash
 pdfimages -list whatever.pdf
@@ -426,13 +404,9 @@ page   object ID x-ppi y-ppi size ratio
    1       17  0   300   300 17.9K 4.0%
 ```
 
-## Compare two PDFs
+## PDF comparison with Comparepdf
 
-Sometimes it's useful to be able to check if two PDF documents contain the same text, or if they have the same visual appearance.
-
-### Comparepdf 
-
-The [Comparepdf](http://www.qtrac.eu/)[^4] tool compares PDFs, based on either text or visual appearance. By default it uses the program exit code to store the result of the comparison. The tool's command-line help text explains the possible outcomes:
+The [Comparepdf](http://www.qtrac.eu/)[^4] tool compares pairs of PDFs, based on either text or visual appearance. By default it uses the program exit code to store the result of the comparison. The tool's command-line help text explains the possible outcomes:
 
 > A return value of 0 means no differences detected; 1 or 2 signifies an error; 10 means they differ visually, 13 means they differ textually, and 15 means they have different page counts
 
