changed intro, added outro

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -10,15 +10,31 @@ comment_id: 76
   <figcaption><a href="https://www.flickr.com/photos/130648318@N06/42662053232">Plumbers Tool Box</a> by <a href="https://www.flickr.com/photos/130648318@N06/">pszz</a> on Flickr. Used under <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC BY-NC-SA 2.0</a>.</figcaption>
 </figure>
 
-Problems with PDF files are a recurring theme in my daily work. Over the years, I've been using a variety of open-source software tools for solving such problems. These include tools for validation and error-checking, the extraction of (technical) features and metadata, and text and image extraction, to name but a few. Many of these are tools that I only use occasionally, and I constantly forget how to use them (if I even remember what tool to use at all), even though I've made several lists, cheat-sheets and working notes (but I end up forgetting about those as well!). To fix this situation once and for all, this post brings together my go-to PDF tools and commands for a variety of common tasks in one single place, largely based on my scattered old notes. This is similar to [my 2015 post on preserving optical media from the command-line]({{ BASE_PATH }}/2015/11/13/preserving-optical-media-from-the-command-line).
+Over the years, I've been using a variety of open-source software tools for solving all sorts of issues with PDF documents. This post is an attempt to (finally) bring together my go-to PDF analysis and processing tools and commands for a variety of common tasks in one single place. It is largely based on a multitude of scattered lists, cheat-sheets and working notes that I made earlier. Starting with a brief overview of some general-purpose PDF toolkits, I then move on to a discussion of the following specific tasks:
 
-All of the tools presented here are published as open-source, and most of them have a command-line interface. They all work under Linux (which is the main OS I'm using these days), but most of them are available for other platforms (including Windows) as well.
+- Validation and integrity testing
+- Validation of compliance with PDF/A and PDF/UA
+- PDF/A and PDF/UA compliance testing
+- Document information and metadata extraction
+- Policy/profile compliance testing
+- Text extraction
+- Link extraction
+- Image extraction
+- Conversion to other (graphics) formats
+- Inspection of embedded image information
+- Cross-comparison of two PDFs
+- Corrupted PDF repair
+- File size reduction of PDF with hi-res graphics
+- Inspection of low-level PDF structure
+- View, search and extract low-level PDF objects
 
 <!-- more -->
 
-## Disclaimer
+## How this selection came about
 
-I would like to stress that the selection of tasks and tools presented here is by no means meant to be exhaustive, as it is guided to a great degree by the PDF-related issues I've encountered myself in my day to day work. Some of these tasks could be done using other tools (including ones that are not mentioned here), and in some cases these other tools may well be better choices! So there's probably a fair amount of selection bias here, and I don't want to make any claims of presenting the "best" way to do any of these tasks here. Also, many of the example commands in this post can be further refined to particular needs (e.g. using additional options or alternative output formats), and they should probably best seen as (hopefully useful) starting points for the reader's own explorations. My intention is that this post will be very much a "living" document, and that more <strike>PDF madness</strike> content will be added over time.
+Even though this post covers a lot of ground, the selection of tasks and tools presented here is by no means meant to be exhaustive. It was guided to a great degree by the PDF-related issues I've encountered myself in my day to day work. Some of these tasks could be done using other tools (including ones that are not mentioned here), and in some cases these other tools may well be better choices. So there's probably a fair amount of selection bias here, and I don't want to make any claims of presenting the "best" way to do any of these tasks here. Also, many of the example commands in this post can be further refined to particular needs (e.g. using additional options or alternative output formats), and they should probably best seen as (hopefully useful) starting points for the reader's own explorations.
+
+All of the tools presented here are published as open-source, and most of them have a command-line interface. They all work under Linux (which is the main OS I'm using these days), but most of them are available for other platforms (including Windows) as well.
 
 ## PDF multi-tools
 
@@ -65,7 +81,7 @@ The tools in Xpdf are largely identical, but don't include *pdfseparate*, *pdfsi
 
 The remaining sections of this post are dedicated to specific tasks. As you will see, many of these can be addressed using the multi-tools listed in this section.
 
-## Validation integrity testing
+## Validation and integrity testing
 
 PDFs that are damaged, structurally flawed or otherwise not conformant to the PDF format specification can result in a multitude of problems. A number of tools provide error checking and integrity testing functionality. This can range from limited structure checks, to full (claimed) validation against the filespec. It's important to note that none of the tools mentioned here are perfect, and some faults that are picked up by one tool may be completely ignored by another one and vice versa. So it's often a good idea to try multiple tools.
 
@@ -147,7 +163,7 @@ mutool info whatever.pdf
 
 - Several online resources recommend the *pdfinfo* tool that is part of Xpdf and Poppler for integrity checking. However, while writing this post I ran a quick test of the tool on a PDF with a truncated document trailer[^1] (which is a very serious flaw), which was not flagged by *pdfinfo* at all.  
 
-## Validate compliance with PDF/A or PDF/UA with VeraPDF
+## PDF/A and PDF/UA compliance testing with VeraPDF
 
 [PDF/A](https://en.wikipedia.org/wiki/PDF/A) comprises a set of ISO-standardized profiles that are aimed at long-term preservation. [PDF/UA](https://en.wikipedia.org/wiki/PDF/UA) is another ISO-standardized profile that ensures accessibility for people with disabilities. These are not separate file formats, but rather profiles within ISO 32000 that put some constraints on PDF's full set of features. [VeraPDF](https://verapdf.org/) was originally developed as an open source PDF/A validator that  covers all parts of the PDF/A standards. Starting with version 1.18, it also added support for PDF/UA. The following command lists al available validation profiles:
 
@@ -278,7 +294,7 @@ More examples can be found in my 2017 post [Policy-based assessment with VeraPDF
 
 ## Text extraction
 
-Text extraction from PDF documents is notoriously hard. [This post]](https://filingdb.com/b/pdf-text-extraction) gives a good overview of the main pitfalls. With that said, quite a few tools are available for this, and below I list a few that are useful starting points.
+Text extraction from PDF documents is notoriously hard. [This post](https://filingdb.com/b/pdf-text-extraction) gives a good overview of the main pitfalls. With that said, quite a few tools are available for this, and below I list a few that are useful starting points.
 
 ### Extract text with pdftotext
 
@@ -310,7 +326,7 @@ java -jar ~/tika/tika-app-2.1.0.jar --text whatever.pdf > whatever.txt
 
 An explanation of all available options is [available here](https://tika.apache.org/1.17/gettingstarted.html) (section "Using Tika as a command line utility").
 
-If you need to process many PDFs, you might consider using TikaServer for better performance. A ([runnable JAR is available here](https://tika.apache.org/download.html)). To use it, first start the server using:
+If you need to process many PDFs, you might consider using TikaServer for better performance. A [runnable JAR is available here](https://tika.apache.org/download.html). To use it, first start the server using:
 
 ```bash
 java -jar ~/tika/tika-server-standard-2.1.0.jar
@@ -351,11 +367,7 @@ I did some limited testing with this tool in 2016. One issue I ran into is that 
 
 - Around the same time I wrote [this simple extraction script](https://gist.github.com/bitsgalore/aab680a9bccfc5496948b776ee06397c) that wraps around Apache Tika and the [xurl](https://github.com/mvdan/xurls) tool. I used this to extract URLs from MS Word documents, but this should probably work for PDF too (I haven't tested this though!).
 
-## Check PDF document for broken links with pdfcpu
-
-<https://gist.github.com/bitsgalore/9eac23e44d6d99b3caa6#check-pdf-document-for-broken-links-with-pdfcpu>
-
-## Image extration with pdfimages
+## Image extraction with pdfimages
 
 PDFs often contain embedded images, which can be extracted with *pdfimages* tool that is part of Xpdf/Poppler. At minimum, it takes as its arguments the name of the input PDF document, and the "image-root" which is actually just a text prefix that is used to generate the name of the output images. By default it writes its output to one of the [Netpbm](https://en.wikipedia.org/wiki/Netpbm) file formats, but for convenience you might want to use the `-png` option, which uses the PNG format instead:
 
@@ -380,7 +392,15 @@ SEVERE: Cannot read JPEG2000 image: Java Advanced Imaging (JAI) Image I/O Tools 
 
 -->
 
-## Listy embedded image information with pdfimages
+## Conversion to other (graphics) formats with pdftocairo
+
+The *pdftocairo* tool (Xpdf/Poppler ) can convert a PDF to a number of (mostly graphics) formats. The supported output formats are PNG, JPEG, TIFF, PostScript, Encapsulated PostScript, Scalable Vector Graphics and PDF. As an example, the following command will convert each page to a PNG image:
+
+```bash
+pdftocairo -png whatever.pdf
+```
+
+## List embedded image information with pdfimages
 
 The *pdfimages* tool is also useful for getting an overview of all embedded images in a PDF, and their main characteristics (width, height, colour, encoding, resolution and size). just user the `-list` option as shown below:  
 
@@ -426,11 +446,39 @@ comparepdf -ca -v=2 whatever.pdf wherever.pdf
 
 In this case the output either shows "No differences detected" or "Files look different".
 
-## Low-level PDF hacking
+## Repair a corrupted PDF
 
-From time to time some pesky PDF issue arises the need to look into the low-level objects that make up a document. I mostly use a Hex editor for such cases, but here are some useful additional tools.
+Sometimes it is possible to recover the contents of corrupted or otherwise damaged PDF documents. [This thread on Super User](https://superuser.com/questions/278562/how-can-i-fix-repair-a-corrupted-pdf-file) mentions two useful options.
 
-### Inspect internal PDF structure with PDFBox PDFDebugger
+### Repair with Ghostscript
+
+```bash
+gs -o whatever_repaired.pdf -sDEVICE=pdfwrite -dPDFSETTINGS=/prepress whatever_corrupted.pdf
+```
+
+### Repair with pdftocairo
+
+A second option mentioned in the Super User thread is *pdftocairo*, which is part of Xpdf and Poppler:
+
+```bash
+pdftocairo -pdf whatever_corrupted.pdf whatever_corrupted.pdf
+```
+
+It's worth adding here that the success of any repair action largely depends on the nature and extent of the damage/corruption, so your mileage may very. Always make sure to carefully check the result, and keep a copy of the original file.
+
+## Reduce size of PDF with hi-res graphics with Ghostscript
+
+The following Ghostscript command (source [here](https://askubuntu.com/questions/113544/how-can-i-reduce-the-file-size-of-a-scanned-pdf-file/256449#256449) can be useful to reduce the size of a large PDF with high-resolution graphics (note that this will result in quality loss):
+
+```bash
+gs -sDEVICE=pdfwrite \
+   -dCompatibilityLevel=1.4
+   -dPDFSETTINGS=/ebook \
+   -dNOPAUSE -dQUIET -dBATCH \
+   -sOutputFile=whatever_small.pdf whatever_large.pdf
+```
+
+## Inspect low-level PDF structure with PDFBox PDFDebugger
 
 PDFBox includes a "PDF Debugger" that is quite useful for exploring a PDF's low-level structure. You can start it with the following command:
 
@@ -447,7 +495,7 @@ Subsequently a GUI window pops up that allows you to browse the PDF's internal o
 
 ## View, search and extract PDF objects with mutool show
 
-Mutool's *show* command allows you to print user-defined PDF objects to stdout. A couple of things you can do with this:
+Mutool's *show* command allows you to print user-defined low-level PDF objects to stdout. A couple of things you can do with this:
 
 - Print the document trailer:
   ```bash
@@ -533,24 +581,9 @@ Result:
 25 0 obj <</BitsPerComponent 8/ColorSpace/DeviceRGB/Filter/DCTDecode/Height 676/Length 141081/Subtype/Image/Type/XObject/Width 1014>> stream
 ```
 
-## Repair
+## Final remarks
 
-Ghostscript, Poppler:
-
-<https://superuser.com/questions/278562/how-can-i-fix-repair-a-corrupted-pdf-file>
-
-
-## Convert PDF to sth else
-
-pdftocairo (Poppler)?
-
-
-## Repair corrupted PDF
-
-<https://superuser.com/questions/278562/how-can-i-fix-repair-a-corrupted-pdf-file>
-
-
-## Reduce size of large PDF with hi-res graphics
+I intend to make this post a "living" document, and will add more PDF "recipes" over time. Feel free to leave a comment in case you spot any errors or omissions!
 
 ## Further resources
 
